# bitbucket.org-marshallpierce-stream-vbyte-rust

./: .gitignore  Cargo.toml  README.md  RELEASE-NOTES.md
benches/: benchmarks.rs
examples/: cli.rs  generate_decode_table.rs
src/: cursor.rs  encode.rs  lib.rs  random_varint.rs  scalar.rs  tables.rs  tests.rs  x86.rs
src/decode/: cursor.rs  mod.rs  ssse3.rs  tests.rs
src/encode/: mod.rs  sse41.rs
src/x86/: sse41.rs  ssse3.rs  x86.rs
tests/: cursor.rs  tests.rs
tests/data/: README.md
