[package]
name = "stream-vbyte"
version = "0.2.0"
description = "Encode and decode numbers in the Stream VByte format"
authors = ["Marshall Pierce <marshall@mpierce.org>"]
homepage = "https://bitbucket.org/marshallpierce/stream-vbyte-rust"
repository = "https://bitbucket.org/marshallpierce/stream-vbyte-rust"
readme = 'README.md'
keywords = ["varint", "stream-vbyte"]
categories = ["encoding"]
license-file = "LICENSE.txt"

[dependencies]
byteorder = "1.1.0"
x86intrin = {version = "0.4.3", optional = true}

[dev-dependencies]
rand = "0.3.16"

[profile.bench]
# Useful for better disassembly when using `perf record` and `perf annotate`
debug = true

[features]
default = []

# Expose SSSE3 SIMD
x86_ssse3 = ["x86intrin"]
